--- a/css/style.css
+++ b/css/style.css
@@ -147,34 +147,23 @@ footer {
     height: 30px;
     margin: 0px 10px; }
 
-.box__footer {
+.box__footer, .contacto {
   display: flex;
   flex-direction: wrap;
   width: 100%; }
-  .box__footer h2 {
+  .box__footer h2, .contacto h2 {
     padding: 10px;
     color: #f5f5f5;
     font-size: 18px;
     border-bottom: 1px solid #fd611a; }
-  .box__footer a {
+  .box__footer a, .contacto a {
     font-size: 8px;
     color: #f5f5f5;
     text-decoration: none;
     padding: 15px 5px 0px 5px; }
 
 .contacto {
-  display: flex;
-  flex-direction: wrap;
-  width: 100%; }
-  .contacto h2 {
-    border-bottom: 1px solid #fd611a;
-    color: #f5f5f5;
-    padding: 10px;
-    font-size: 18px; }
-  .contacto a {
-    margin-top: 10px;
-    color: #f5f5f5;
-    text-decoration: none; }
+  background: #fd611a; }
 
 .copyright {
   font-size: 12px;
@@ -194,7 +183,7 @@ footer {
   .item img {
     width: 250px;
     height: 250px; }
-  .box__footer a {
+  .box__footer a, .contacto a {
     font-size: 12px;
     text-decoration: none;
     padding: 15px 5px 0px 5px; } }
@@ -210,14 +199,14 @@ footer {
     flex-wrap: wrap;
     justify-content: space-evenly;
     margin: auto; }
-  .box__footer {
+  .box__footer, .contacto {
     display: flex;
     flex-direction: column;
     width: auto; }
-    .box__footer h2 {
+    .box__footer h2, .contacto h2 {
       padding: 10px;
       font-size: 18px; }
-    .box__footer a {
+    .box__footer a, .contacto a {
       font-size: 12px;
       text-decoration: none;
       padding: 15px 5px 0px 5px; }
@@ -554,7 +543,7 @@ footer {
 .main_catalogo {
   background: #eceef0;
   width: 100%;
-  height: 2450px; }
+  height: 2550px; }
 
 .relleno_catalogo {
   background: #fd611a;
@@ -601,10 +590,19 @@ footer {
   .item_catalogo:hover {
     transform: scale(0.9); }
 
+.item_catalogo {
+  background-color: #fd611a; }
+
+.item_catalogo {
+  background-color: violet; }
+
+.item_catalogo {
+  background-color: #00000031; }
+
 @media screen and (min-width: 350px) {
   .main_catalogo {
     width: 100%;
-    height: 2350px; }
+    height: 2360px; }
   .caja1_catalogo {
     width: 350px;
     height: 2300px;
