--- a/scss/_colores.scss
+++ b/scss/_colores.scss
@@ -1,7 +1,9 @@
 $color-nav-footer: #000000;
-$color-main:#eceef0;
-$color-productos:#ffffff;
-$color-secundario:#fd611a;
-$color-background:violet;
+$color-main: #eceef0;
+$color-productos: #ffffff;
+$color-secundario: #fd611a;
+$color-background: violet;
 $color_sombras: #00000031;
-$color_letras:#f5f5f5;
+$color_letras: #f5f5f5;
+
+$colores: ($color-secundario, $color-background, $color_sombras);
