--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,5 @@
 @import "colores";
+@import "mixins";
 
 * {
   margin: 0;
@@ -264,20 +265,23 @@ footer {
 }
 
 .contacto {
-  display: flex;
-  flex-direction: wrap;
-  width: 100%;
-  h2 {
-    border-bottom: 1px solid $color-secundario;
-    color: $color_letras;
-    padding: 10px;
-    font-size: 18px;
-  }
-  a {
-    margin-top: 10px;
-    color: $color_letras;
-    text-decoration: none;
-  }
+  // display: flex;
+  // flex-direction: wrap;
+  // width: 100%;
+  // h2 {
+  //   border-bottom: 1px solid $color-secundario;
+  //   color: $color_letras;
+  //   padding: 10px;
+  //   font-size: 18px;
+  // }
+  // a {
+  //   margin-top: 10px;
+  //   color: $color_letras;
+  //   text-decoration: none;
+  // }
+
+  @extend .box__footer;
+  background: $color-secundario;
 }
 
 .copyright {
@@ -796,7 +800,7 @@ footer {
 .main_catalogo {
   background: $color-main;
   width: 100%;
-  height: 2450px;
+  height: 2550px;
 }
 .relleno_catalogo {
   background: $color-secundario;
@@ -852,21 +856,30 @@ footer {
   }
 }
 
-@media screen and (min-width: 350px) {
-  .main_catalogo {
-    width: 100%;
-    height: 2350px;
-  }
-  .caja1_catalogo {
-    width: 350px;
-    height: 2300px;
-    margin: auto;
-    img {
-      width: 250px;
-      height: 250px;
-    }
+@each $valor in $colores {
+  .item_catalogo {
+    background-color: $valor; 
   }
 }
+
+@include media-catalogo;
+
+// @media screen and (min-width: 350px) {
+//   .main_catalogo {
+//     width: 100%;
+//     height: 2360px;
+//   }
+//   .caja1_catalogo {
+//     width: 350px;
+//     height: 2300px;
+//     margin: auto;
+//     img {
+//       width: 250px;
+//       height: 250px;
+//     }
+//   }
+// }
+
 @media screen and (min-width: 750px) {
   .main_catalogo {
     width: 100%;
