--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,3 +1,5 @@
+// CATALOGO
+
 @mixin media-catalogo {
   @media screen and (min-width: 350px) {
     .main_catalogo {
@@ -12,6 +14,773 @@
         width: 250px;
         height: 250px;
       }
+    }
+  }
+  @media screen and (min-width: 750px) {
+    .main_catalogo {
+      width: 100%;
+      height: 1250px;
+    }
+    .caja1_catalogo {
+      width: 100%;
+      height: 1200px;
+      margin: auto;
+    }
+    .producto_catalogo {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-evenly;
+      flex-direction: row;
+      margin: 20px auto;
+    }
+    .item_catalogo {
+      width: 300px;
+      img {
+        width: 250px;
+        height: 250px;
+        margin: auto;
+      }
+    }
+  }
+  @media screen and (min-width: 1200px) {
+    .main_catalogo {
+      width: 100%;
+      height: 950px;
+    }
+  }
+}
+
+// INDEX
+
+@mixin media-index {
+  @media screen and (min-width: 350px) {
+    .menu {
+      li {
+        display: inline-block;
+        margin: 10px auto;
+      }
+    }
+    .caja1 {
+      width: 350px;
+      height: 800px;
+      margin: 20px;
+    }
+    .item {
+      img {
+        width: 250px;
+        height: 250px;
+      }
+    }
+    .box__footer {
+      a {
+        font-size: 12px;
+        text-decoration: none;
+        padding: 15px 5px 0px 5px;
+      }
+    }
+  }
+
+  @media screen and (min-width: 450px) {
+    footer {
+      margin: 0px 0px 0px 0px;
+      width: 100%;
+      height: auto;
+      padding: 10px 0px 10px 0px;
+    }
+
+    .footer_container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-evenly;
+      margin: auto;
+    }
+
+    .box__footer {
+      display: flex;
+      flex-direction: column;
+      width: auto;
+      h2 {
+        padding: 10px;
+        font-size: 18px;
+        border-right: 0px solid $color-secundario;
+        border-bottom: 1px solid $color-secundario;
+      }
+      a {
+        font-size: 12px;
+        text-decoration: none;
+        padding: 15px 5px 0px 5px;
+      }
+    }
+
+    .img-footer {
+      display: flex;
+      flex-direction: wrap;
+    }
+
+    .contacto {
+      display: flex;
+      flex-direction: column;
+      width: auto;
+      h2 {
+        padding: 10px;
+        font-size: 18px;
+      }
+      a {
+        margin-top: 10px;
+        text-decoration: none;
+      }
+    }
+  }
+
+  @media screen and (min-width: 750px) {
+    .menu_container {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      position: fixed;
+      width: 100%;
+      height: 150px;
+    }
+
+    .logo {
+      width: 20%;
+      height: 100px;
+      margin: 20px 50px 20px 0px;
+      img {
+        width: 200px;
+        height: 100px;
+      }
+    }
+
+    .menu {
+      text-align: center;
+      width: 70%;
+      height: 150px;
+      ul {
+        width: 600px;
+        height: 100px;
+        margin: 50px 40px 0px 0px;
+        li {
+          display: inline-block;
+          justify-content: space-evenly;
+          a {
+            font-size: 18px;
+            text-decoration: none;
+            padding: 10px 30px;
+          }
+        }
+      }
+    }
+
+    .flex {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: nowrap;
+      height: 850px;
+      width: 100%;
+    }
+
+    .banner_columna {
+      display: flex;
+      width: 180px;
+      height: 600px;
+      margin: 40px auto;
+      padding: 5px;
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    }
+
+    footer {
+      height: auto;
+    }
+  }
+
+  @media screen and (min-width: 1200px) {
+    .main_container {
+      width: 100%;
+      height: 1480px;
+    }
+
+    .relleno {
+      width: 100%;
+      height: 10px;
+    }
+
+    .slide {
+      display: flex;
+      width: 100%;
+      height: 350px;
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    }
+
+    .caja1 {
+      width: 600px;
+      height: 600px;
+      margin: 20px;
+      h1 {
+        margin: 0px 0px 10px 0px;
+        padding: 5px;
+        text-align: center;
+        display: block;
+        font-family: "Rajdhani", sans-serif;
+      }
+    }
+
+    .producto {
+      display: flex;
+      flex-wrap: nowrap;
+      flex-direction: row;
+      margin: 5px 10px;
+    }
+
+    .slide_marcas {
+      display: flex;
+      width: 1200px;
+      height: 120px;
+      margin: 10px auto;
+      overflow: hidden;
+      ul {
+        display: flex;
+        height: 100%;
+        width: 300%;
+        animation: slide 10s infinite alternate-reverse ease-in-out;
+        li {
+          width: 300px;
+          height: 100%;
+          list-style: none;
+          img {
+            height: 100%;
+            width: 100%;
+          }
+        }
+      }
+    }
+
+    @keyframes slide {
+      0% {
+        margin-left: -3%;
+      }
+
+      50% {
+        margin-left: -53%;
+      }
+
+      50% {
+        margin-left: -53%;
+      }
+
+      100% {
+        margin-left: -100%;
+      }
+    }
+
+    footer {
+      margin: 0px 0px 0px 0px;
+      width: 100%;
+      height: auto;
+      padding: 10px 0px 10px 0px;
+    }
+  }
+
+  @media screen and (min-width: 1400px) {
+    .logo {
+      width: 20%;
+      height: 100px;
+      margin: 20px 170px 20px 50px;
+      img {
+        width: 450px;
+        height: 100px;
+      }
+    }
+
+    .menu {
+      text-align: center;
+      width: 70%;
+      height: 150px;
+      ul {
+        width: 600px;
+        height: 100px;
+        margin: 50px 40px 0px 0px;
+      }
+    }
+
+    .slide {
+      display: flex;
+      width: 100%;
+      height: 350px;
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    }
+
+    .banner_columna {
+      display: flex;
+      width: 250px;
+      height: 700px;
+      margin: 40px auto;
+    }
+
+    .caja1 {
+      width: 800px;
+      height: 500px;
+      margin: 100px 50px;
+      h1 {
+        text-align: center;
+        display: block;
+        font-family: "Rajdhani", sans-serif;
+      }
+    }
+
+    .producto {
+      display: flex;
+      margin: 5px 10px;
+    }
+
+    .item {
+      img {
+        width: 300px;
+        height: 350px;
+      }
+    }
+    footer {
+      height: auto;
+    }
+  }
+
+  @media screen and (min-height: 1300px) {
+    body {
+      background: $color-nav-footer;
+    }
+    footer {
+      height: 350px;
+    }
+  }
+}
+
+// CONTACTO
+
+@mixin media-contacto {
+  @media screen and (min-width: 350px) {
+    .formulario {
+      padding: 20px;
+      text-align: left;
+      margin: 20px auto 20px auto;
+      width: 250px;
+      height: 670px;
+    }
+    .img-footer {
+      display: flex;
+      flex-direction: wrap;
+    }
+  }
+  @media screen and (min-width: 500px) {
+    .main_contacto {
+      width: 100%;
+      height: 900px;
+    }
+    .formulario {
+      padding: 20px;
+      text-align: left;
+      margin:  50px auto;
+      width: 500px;
+      height: 670px;
+      h1 {
+        margin: 5px;
+      }
+      form {
+        height: 580px;
+      }
+      label {
+        padding: 5px;
+      }
+      input {
+        display: block;
+        width: 400px;
+        padding: 10px;
+        margin: 5px;
+      }
+      textarea {
+        width: 400px;
+        padding: 10px;
+        margin: 5px;
+      }
+    }
+    #enviar {
+      width: 150px;
+      display: inline-block;
+    }
+    #robot{
+      display: inline-block;
+    }
+    #check{
+      display: inline-block;
+      width: 20px;
+    }
+    }
+
+  @media screen and (min-width: 750px) {
+    .main_contacto {
+      width: 100%;
+      height: 800px;
+    }
+
+    .formulario {
+      padding: 20px;
+      text-align: left;
+      margin:  50px auto;
+      width: 550px;
+      height: 650px;
+    
+      input {
+        display: block;
+        width: 450px;
+        padding: 10px;
+        margin: 5px;
+      }
+      textarea {
+        display: block;
+        width: 450px;
+        padding: 10px;
+        margin: 5px;
+      }
+    }
+    footer {
+      height: 300px;
+    }
+  }
+
+  @media screen and (min-width: 1200px) {
+    .main_contacto {
+      width: 100%;
+      height: 800px;
+    }
+    .formulario {
+      padding: 20px;
+      text-align: left;
+      margin:  50px auto;
+      width: 800px;
+      height: 670px;
+      input {
+        display: block;
+        width: 650px;
+        padding: 10px;
+        margin: 5px;
+      }
+      textarea {
+        width: 650px;
+        padding: 10px;
+        margin: 5px;
+      }
+    }
+
+    
+  }
+  
+}
+// ACERCA DE NOSOTROS
+
+@mixin media-acerca {
+  @media screen and (min-width: 375px) {
+    .main_acerca_nos {
+      width: 100%;
+      height: 1060px;
+    }
+    .contenedor_acerca {
+      display: flex;
+      margin: auto;
+      width: 100%;
+      height: 900px;
+    }
+    .texto {
+      padding: 20px;
+      width: 100%;
+      height: auto;
+      p {
+        height: auto;
+        margin: 30px 0px;
+      }
+    }
+    .img-footer{
+      display: flex;
+      flex-direction: wrap;
+    }
+  }
+  @media screen and (min-height: 740px) {
+    .main_acerca_nos {
+      width: 100%;
+      height: 940px;
+    }
+    .contenedor_acerca{
+      padding: 10px;
+    }
+  }
+  @media screen and (min-width: 800px) {
+    .main_acerca_nos {
+      width: 100%;
+      height: 1060px;
+    }
+    .contenedor_acerca {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      margin: 30px 0px;
+      width: 100%;
+      height: 900px;
+    }
+
+    .texto {
+      padding: 20px;
+      width: 40%;
+      height: auto;
+      p {
+        height: auto;
+        margin: 10px 0px;
+      }
+    }
+  }
+  @media screen and (min-width: 1200px) {
+    .main_acerca_nos {
+      width: 100%;
+      height: 1000px;
+    }
+    .contenedor_acerca {
+      margin: auto;
+      display: flex;
+      justify-content: space-around;
+      flex-direction: row;
+      width: 100%;
+      height: 900px;
+    }
+ 
+    .texto {
+      display: flex;
+      padding: 20px;
+      width: 40%;
+      height: auto;
+      p {
+        height: auto;
+        margin: 10px 0px;
+      }
+    }
+  }
+}
+
+// PRODUCTO
+
+@mixin media-producto {
+  @media screen and (min-width: 768px) {
+    .main_producto {
+      width: 100%;
+      height: 1050px;
+    }
+
+    .producto_container {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: space-evenly;
+      height: 700px;
+      margin: 30px auto;
+      width: 100%;
+    }
+
+    .foto_producto {
+      width: 200px;
+      height: 360px;
+      margin: 20px 50px 20px 50px;
+      border-radius: 5px;
+      img {
+        width: 150px;
+        height: 340px;
+        margin: 10px 25px;
+      }
+    }
+
+    .titular {
+      border-radius: 5px;
+      width: 360px;
+      height: 340px;
+      padding: 10px;
+      margin: 20px 40px 20px 40px;
+      h1 {
+        font-size: 25px;
+        font-family: "Rajdhani", sans-serif;
+        margin: 10px;
+      }
+    }
+
+    .descripcion {
+      border-radius: 5px;
+      margin: 20px 50px 20px 50px;
+      width: 100%;
+      height: 150px;
+      padding: 10px;
+    }
+  }
+  @media screen and (min-width: 800px) {
+    .main_producto {
+      width: 100%;
+      height: 1050px;
+    }
+
+    .clasita {
+      height: 1040px;
+    }
+    .producto_container {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: space-evenly;
+      height: 950px;
+      margin: 30px auto;
+      width: 800px;
+    }
+
+    .foto_producto {
+      width: 200px;
+      height: 360px;
+      margin: 20px 50px 20px 50px;
+      border-radius: 5px;
+      img {
+        width: 150px;
+        height: 340px;
+        margin: 10px 25px;
+      }
+    }
+
+    .titular {
+      border-radius: 5px;
+      width: 420px;
+      height: 340px;
+      padding: 10px;
+      margin: 20px 40px 20px 40px;
+      h1 {
+        font-size: 25px;
+        font-family: "Rajdhani", sans-serif;
+        margin: 10px;
+      }
+    }
+
+    .descripcion {
+      border-radius: 5px;
+      margin: 20px 50px 20px 50px;
+      width: 100%;
+      height: 150px;
+      padding: 10px;
+    }
+  }
+
+  @media screen and (min-width: 1050px) {
+    .main_producto {
+      width: 100%;
+      height: 800px;
+    }
+    .clasita{
+      height: 790px;
+    }
+    .producto_container {
+      display: flex;
+      flex-wrap: wrap;
+      height: 610px;
+      margin: auto 10px;
+      width: 830px;
+    }
+
+    .foto_producto {
+      width: 270px;
+      height: 360px;
+      margin: 20px 30px 20px 30px;
+      border-radius: 5px;
+      img {
+        width: 240px;
+        height: 340px;
+        margin: 10px 25px;
+      }
+    }
+
+    .titular {
+      border-radius: 5px;
+      width: 440px;
+      height: 340px;
+      padding: 10px;
+      margin: 20px 20px 20px 20px;
+    }
+
+    .descripcion {
+      border-radius: 5px;
+      margin: 20px 30px 20px 30px;
+      width: 752px;
+      height: 150px;
+      padding: 10px;
+    }
+  }
+
+  @media screen and (min-width: 1200px) {
+    .main_producto {
+      width: 100%;
+      height: 900px;
+    }
+    .clasita {
+      height: 890px;
+
+    }
+    .producto_container {
+      display: flex;
+      flex-wrap: wrap;
+      height: 610px;
+      margin: auto;
+      width: 720px;
+    }
+
+    .foto_producto {
+      width: 300px;
+      height: 360px;
+      margin: 20px 30px 20px 30px;
+      border-radius: 5px;
+    }
+
+    .titular {
+      border-radius: 5px;
+      width: 292px;
+      height: 340px;
+      padding: 10px;
+      margin: 20px 20px 20px 20px;
+    }
+
+    .descripcion {
+      border-radius: 5px;
+      margin: 20px 30px 20px 30px;
+      width: 642px;
+      height: 150px;
+      padding: 10px;
+    }
+  }
+
+  @media screen and (min-height: 1300px) {
+    .main_producto {
+      width: 100%;
+      height: 1100px;
+    }
+    .producto_container {
+      display: flex;
+      flex-wrap: wrap;
+      height: 700px;
+      margin: 80px auto;
+      background: #eceef0;
+      width: 100%;
+    }
+    .titular {
+      border-radius: 5px;
+      width: 500px;
+      height: 340px;
+      padding: 10px;
+      margin: 20px 20px 20px 20px;
     }
   }
 }
