--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -4,11 +4,11 @@
   @media screen and (min-width: 350px) {
     .main_catalogo {
       width: 100%;
-      height: 2360px;
+      height: 4060px;
     }
     .caja1_catalogo {
       width: 350px;
-      height: 2300px;
+      height: 4000px;
       margin: auto;
       img {
         width: 250px;
@@ -19,11 +19,11 @@
   @media screen and (min-width: 750px) {
     .main_catalogo {
       width: 100%;
-      height: 1250px;
+      height: 2050px;
     }
     .caja1_catalogo {
       width: 100%;
-      height: 1200px;
+      height: 2000px;
       margin: auto;
     }
     .producto_catalogo {
@@ -45,7 +45,23 @@
   @media screen and (min-width: 1200px) {
     .main_catalogo {
       width: 100%;
+      height: 1600px;
+    }
+    .caja1_catalogo {
+      width: 100%;
+      height: 1500px;
+      margin: auto;
+    }
+  }
+  @media screen and (min-width: 1200px) and (min-height: 850px) {
+    .main_catalogo {
+      width: 100%;
+      height: 900px;
+    }
+    .caja1_catalogo {
+      width: 100%;
       height: 950px;
+      margin: auto;
     }
   }
 }
